--- a/style.css
+++ b/style.css
@@ -1,6 +1,40 @@
 #myCanvas{
     display: block;
-    background-color: #FFFFCC;
     margin: 50px auto;
     box-shadow: 10px 10px 10px #474747;
+}
+
+#btn1{
+    display: block;
+    margin: 50px auto;
+    background: #1e8ef6;
+    font-family: Arial;
+    color: #fafafa;
+    font-size: 18px;
+    padding: 15px;
+    text-decoration: none;
+}
+
+#h1{
+    top: 50px;
+    font-family: Arial;
+    color: #1e8ef6;
+    font-size: 35px;
+    text-decoration: none;
+}
+
+.h2{
+    top: 50px;
+    font-family: Arial;
+    color: #1e8ef6;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+.WB{
+    position: absolute;
+    width:600px;
+    left: 420px;
+    top:300px;
+    z-index: 2;
 }
